<resources>
    <string name="app_name">Wordist</string>
    <string name="display_message">Test Massage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_display_message">Wordist</string>
    <string name="start_button_text">CHALLENGE</string>
    <string name="new_game">NEW GAME</string>
    <string name="definition">HINT</string>
    <string name="score">SCORE:</string>
    <string name="keyboard_hint">Tap screen to show keyboard</string>
    <string name="title_activity_splash_screen">splash_screen</string>
    <string name="lives">LIVES:</string>
    <string name="enter_word">Enter your word below</string>
    <string name="done">DONE</string>
    <string name="two_player">TWO PLAYER</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="leaderboardId">CgkIzYDk8vIEEAIQAQ</string>
    <string name="signin_other_error">Unable to sign in</string>
    <string name="signin_failure">Unable to sign in</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>

    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>

    <!-- -
        This is an ad unit ID for a real interstitial ad.
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-5757907393226907/1134316078</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad.
    <!- -->
    <string name="interstitial_test_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

</resources>

