<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mike.WordistHangman.DisplayMessage"
    android:onClick="toggle_soft_keyboard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="TEST"
        android:id="@+id/letters_view"
        android:visibility="visible"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:typeface="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/guessed_letters_view"
        android:textSize="25dp"
        android:layout_alignBaseline="@+id/next_word"
        android:layout_alignBottom="@+id/next_word"
        android:layout_centerHorizontal="true" />

    <Button
        android:textColor="#FFFFFF"

        android:layout_width="90dp"
        android:layout_height="35dp"
        android:text="@string/new_game"
        android:id="@+id/button2"
        android:onClick="new_game_onClick"
        android:focusable="false"

        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_alignParentStart="false"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

    <Button
        android:textColor="#FFFFFF"

        android:layout_width="80dp"
        android:layout_height="35dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/definition"
        android:id="@+id/definition"
        android:onClick="show_definition"
        android:focusable="false"
        android:layout_below="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:textColor="#ff000000"
        android:layout_marginTop="79dp"
        android:layout_below="@+id/guessed_letters_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="#"
        android:id="@+id/score_view"
        android:layout_alignBottom="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/keyboard_hint"
        android:id="@+id/textView2"
        android:layout_marginBottom="37dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/life_view"
        android:text="15"
        android:layout_alignBottom="@+id/score_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="next"
        android:id="@+id/next_word"
        android:visibility="invisible"
        android:onClick="get_next_word"
        android:layout_below="@+id/letters_view"
        android:layout_centerHorizontal="true"
        android:focusable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lives"
        android:id="@+id/textView3"
        android:textColor="#ff000000"
        android:textSize="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignBaseline="@+id/life_view"
        android:layout_alignBottom="@+id/life_view"
        android:layout_toLeftOf="@+id/life_view"
        android:layout_toStartOf="@+id/life_view" />

</RelativeLayout>
